# WideSky

./: .env  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/widesky/: Dockerfile  requirements.txt
src/widesky/widesky/: firehose_utils.py  widesky.py  widesky_db.py  widesky_processor.py
widesky/widesky/: widesky.py  widesky_db.py  widesky_processor.py
